@@ -138,6 +138,7 @@ setup(name=name,
         'Levenshtein': ['python-Levenshtein'],
         'BCrypt': ['passlib[bcrypt]'],
         'html2text': ['html2text'],
+        'coroutine': ['gevent>=1.1'],
         },
     zip_safe=False,
     test_suite='trytond.tests',
