@@ -12,6 +12,10 @@ logging_config = os.environ.get('TRYTOND_LOGGING_CONFIG')
 if logging_config:
     logging.config.fileConfig(logging_config)
 
+if os.environ.get('TRYTOND_COROUTINE'):
+    from gevent import monkey
+    monkey.patch_all()
+
 from trytond.pool import Pool
 from trytond.wsgi import app
 
